@@ -57,11 +57,11 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileInputStream;
 import java.net.MalformedURLException;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.regex.Matcher;
@@ -82,6 +82,7 @@ import com.openexchange.html.internal.jericho.JerichoHandler;
 import com.openexchange.html.internal.parser.handler.HTMLFilterHandler;
 import com.openexchange.html.internal.parser.handler.HTMLURLReplacerHandler;
 import com.openexchange.html.services.ServiceRegistry;
+import com.openexchange.html.tools.HTMLUtils;
 import com.openexchange.java.AsciiReader;
 import com.openexchange.java.Streams;
 import com.openexchange.java.StringAllocator;
@@ -714,12 +715,30 @@ public final class FilterJerichoHandler implements JerichoHandler {
         }
     }
 
+    private static final Set<String> NOT_ALLOWED = Collections.unmodifiableSet(new HashSet<String>(Arrays.asList("%3c", "%3e", "%22")));
+
     private static boolean isNonJavaScriptURL(final String val) {
+        // http://www.raumausstatter-innung-schwalm-eder.de/index.php?eID=tx_cms_showpic&file=uploads%2Fpics%2F13-06-Raumausstatter-JHV.jpg&width=500m&height=500&bodyTag=%3Cbody%20bgColor%3D%22%23ffffff%22%3E&wrap=%3Ca%20href%3D%22javascript%3Aclose%28%29%3B%22%3E%20%7C%20%3C%2Fa%3E&md5=a0a07697cb8be1898b5e9ec79d249de2
         if (null == val) {
             return false;
         }
-        final String lc = val.trim().toLowerCase(Locale.US);
-        return !lc.startsWith("javascript:") && !lc.startsWith("vbscript:");
+        String lc = toLowerCase(val.trim());
+        if (lc.startsWith("javascript:") || lc.startsWith("vbscript:")) {
+            return false;
+        }
+        if (lc.indexOf("%") < 0) {
+            return true;
+        }
+        for (final String notAllowed : NOT_ALLOWED) {
+            if (lc.indexOf(notAllowed) >= 0) {
+                return false;
+            }
+        }
+        lc = HTMLUtils.decodeUrl(val, null);
+        if (lc.startsWith("javascript:") || lc.startsWith("vbscript:")) {
+            return false;
+        }
+        return true;
     }
 
     @Override
